package com.android.myplacesandroid.presentation.screen.root.home

object HomeScreenTestTags {
    const val CIRCULAR_PROGRESS_INDICATOR = "circular_progress_indicator"
    const val MAP_TAB_BOX = "map_tab_box"
    const val LIST_TAB_BOX = "list_tab_box"
    const val SIZE_CONTROL_UP = "size_control_up"
    const val SIZE_CONTROL_DOWN = "size_control_down"
    const val LOADED_VIEW = "loaded_view"
}